<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferencesActivity">


    <CheckBox
        android:id="@+id/cbMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="273dp"
        android:text="@string/TvMusic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvColors"
        android:layout_width="84dp"
        android:layout_height="39dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/TvColors"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNotification"
        android:layout_width="139dp"
        android:layout_height="52dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="112dp"
        android:gravity="center"
        android:text="Notification"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbMusic" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNotification"
        app:layout_constraintTop_toTopOf="@+id/tvNotification">

        <RadioButton
            android:id="@+id/rbOneDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvOneD" />

        <RadioButton
            android:id="@+id/rbTwoDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvTwoD" />

        <RadioButton
            android:id="@+id/rbOneWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvOneW" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="116dp"
        android:onClick="onSave"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvColors">

        <RadioButton
            android:id="@+id/rbRed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvRed" />

        <RadioButton
            android:id="@+id/rbBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvBlue" />

        <RadioButton
            android:id="@+id/rbGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TvGreen" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>